<resources>
    <string name="app_name">Insomnia Eraser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_desc">"Healthy sleep. stay focused \n\ Live a healthy life"</string>
    <string name="first_fragment_title">Ensomina Earse Library</string>
    <string name="first_fragment_desc">an extraordinary library curated forthe sole purpose of serenity.\n\ Within itswalls, discover a harmonious collectionof books that gently cradle your mind, novels that weave dreams oftranquility, and melodies that embraceyou in a lullaby of relaxation. Immerseyourself in this haven, where the magica of literature and melodies collaborates to escort you into a blissful realm of sleep and repose\".</string>
    <string name="second_fragment_title">Talk to a doctor</string>
    <string name="second_fragment_desc">Now you can consult the best doctors easily \n\"while staying at home throught Ensomina Earse app Telehealth service\"</string>
    <string name="third_fragment_title">MEDITION, ANDRELAXATION</string>
    <string name="third_fragment_desc">Embark on a serene journey of self-discovery in our special meditationsession, where tranquility meetsmindfulness. Immerse yourself in asoothing atmosphere, guided byexperienced practitioners, as youunwind and reconnect with your innercalm. Join us for a transformativeexperience of relaxation andrejuvenation.</string>
    <string name="fourth_fragment_title">Healthy Life Style</string>
    <string name="fourth_fragment_desc">\"a cutting-edge section designed tonseamlessly integrate into your daily life,guiding you towards a healthier routine..By leveraging personalized insights andareminders, this innovative toolempowers individuals to makesustainable lifestyle choices, fosteringalong-term well-being.</string>
    <string name="please_wait">Please Wait</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_sign_in">Please…Sign in to continue</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_acc">Let\'s create your account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="passwordConfirmation">Confirm Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="SignUp">SignUp</string>
    <string name="enter_first_name"> First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="must">Your password must be longer than 8 characters</string>
    <string name="not_the_same">Not the same !</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="number_length">Your Number Must be 11 digit</string>
    <string name="signup">Sign Up</string>
    <string name="you_don_t_have_an_account">You don\'t Have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Hello">Hello</string>
    <string name="Library">Library</string>
    <string name="meditation">Meditations \n &amp;Relaxation</string>
    <string name="meditation_fragment">Meditations&amp;Relaxation</string>
    <string name="chat">Doctor Chat</string>
    <string name="food">Healthy Food</string>
    <string name="chat_with_doctor">chat with doctor</string>
    <string name="medical_con">Medical\nConsultant</string>
    <string name="type_book_name">Type book name ...</string>
    <string name="book_description">Book description</string>
    <string name="fill_out_the_form_below_to_receive_your_diagnosis_results">Fill out the form below to receive your diagnosis results</string>
    <string name="check_btn">Check</string>
    <string name="your_result_is">Your result is</string>
    <string name="Healthy_Life">Healthy Food\n</string>
    <string name="dinner">Dinner</string>
    <string name="unable_to_updated_token">Unable to updated token</string>
    <string name="type_a_message">Typa A Message</string>
    <string name="online">online</string>
    <string name="fiveth_fragment_title">Ai Medical Consultant</string>
    <string name="fives_fragment_desc">The AI medical consultant is a comprehensive digital health platform that combines user-friendly interfaces, robust backend processing, and sophisticated AI algorithms to deliver personalized medical advice. It can be accessed through various devices such as smartphones, tablets, and computers, ensuring accessibility and convenience for users.</string>
</resources>