<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.marco.ensominaearser.ui.authscreens.LoginFragment">

    <LinearLayout
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@drawable/shape_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_10sdp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_85sdp"
            app:layout_constraintTop_toBottomOf="@id/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/source"
            android:layout_marginStart="@dimen/_6sdp" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:cursorColor="@color/black"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:hint="@string/email"
        app:hintAnimationEnabled="true"
        app:startIconTint="@color/blue"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:cursorColor="@color/black"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:hint="@string/password"
        app:hintAnimationEnabled="true"
        app:startIconTint="@color/blue"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:background="@drawable/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        android:indeterminateTint="@color/blue"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:text="@string/signup"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>