<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authscreens.SignupFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/shape"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:background="@drawable/shape_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/_10sdp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_85sdp"
                app:layout_constraintTop_toBottomOf="@id/shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/source"
                android:layout_marginStart="@dimen/_6sdp"
               />
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/firstName"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cursorColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/shape"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/lastName"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName_et"
            app:cursorColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName_et"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:cursorColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et"
            app:passwordToggleEnabled="true"
            app:cursorColor="@color/black"
            app:startIconDrawable="@drawable/baseline_lock_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="130dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmation_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/passwordConfirmation"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_et"
            app:passwordToggleEnabled="true"
            app:cursorColor="@color/black"
            app:startIconDrawable="@drawable/baseline_lock_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirm_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="130dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:hint="@string/phoneNumber"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:cursorColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmation_et"
            app:startIconDrawable="@drawable/baseline_local_phone_24">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/login_btn"
            android:text="@string/SignUp"
            android:focusableInTouchMode="false"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_group" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber_et">


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/male_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/ntailub"
                android:background="@drawable/female_btn"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="Female" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/female_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/ntailub"
                android:background="@drawable/male_btn"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="Male" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminateTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/gender_group"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
